colocado o post1 e o css e os menus

--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,8 @@
 	  	background-size: cover;  //estica imagem 
 	  	background-color: green;
 	  	text-align: center;
-	  	padding: 100px 0px;
+	  	padding: 0px 0px;
+	  	
 	  }
 	  
 	  div#a2 {
@@ -19,3 +20,22 @@
 	  div#a2 button {
 	  	float:right;
 	  }
+
+	  ul {
+      padding: 10px;
+      background: rgba(0,0,0,0.5);
+      margin:0;
+  }
+
+      li {
+      	font-weight: normal;
+      	font-family: impact;
+      	font-style: normal;
+        display: inline;
+        padding: 0px 10px 0px 10px;
+
+         }
+
+       a {
+          color: black;
+        }
