--- a/stylesheets/estilo.css
+++ b/stylesheets/estilo.css
@@ -3,7 +3,7 @@
 	  }
 
 	  div#a1 {
-	  	background-image: url(http://cleofas.com.br/wp-content/uploads/2011/04/ceu-azul1.jpg);
+	  	background-image: url(../images/fundo.jpg);
 	  	background-repeat:no-repeat;
 	  	background-size: cover;  //estica imagem 
 	  	background-color: green;
